--- a/About-Me.html
+++ b/About-Me.html
@@ -36,7 +36,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="About-Me.html" data-home-page-title="About Me" class="u-body"><header class="u-border-2 u-border-grey-75 u-clearfix u-header u-palette-1-base u-sticky u-header" id="sec-44b4"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-border-2 u-border-grey-75 u-clearfix u-header u-palette-1-base u-sticky u-header" id="sec-44b4"><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse" style="font-size: 1rem;">
             <a class="u-button-style u-nav-link" href="#" style="padding: 9px 0; font-size: calc(1em + 26px);">
