--- a/Profile-Information.html
+++ b/Profile-Information.html
@@ -48,8 +48,9 @@
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="About-Me.html" style="padding: 10px 20px;">About Me</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Profile-Information.html" style="padding: 10px 20px;">Profile Information</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Skills-and-Knowledge.html" style="padding: 10px 20px;">Skills and Knowledge</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="ECBA-CBAP.html" style="padding: 10px 20px;">ECBA CBAP</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Experiences.html" style="padding: 10px 20px;">Experiences</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Certification.html" style="padding: 10px 20px;">Certification</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Competencies.html" style="padding: 10px 20px;">Competencies</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -57,18 +58,19 @@
               <div class="u-menu-close"></div>
               <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About-Me.html" style="padding: 10px 20px;">About Me</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Profile-Information.html" style="padding: 10px 20px;">Profile Information</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Skills-and-Knowledge.html" style="padding: 10px 20px;">Skills and Knowledge</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="ECBA-CBAP.html" style="padding: 10px 20px;">ECBA CBAP</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Experiences.html" style="padding: 10px 20px;">Experiences</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Certification.html" style="padding: 10px 20px;">Certification</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Competencies.html" style="padding: 10px 20px;">Competencies</a>
 </li></ul>
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <h1 class="u-text u-text-default u-title u-text-1"><span class="u-icon u-icon-1"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" style="width: 1em; height: 1em;"><path d="m56 488v-99.909a30 30 0 0 1 18.578-27.741l125.422-48.35h112l125.422 48.35a30 30 0 0 1 18.578 27.741v99.909z" fill="#333"></path><path d="m208 376h96v112h-96z" fill="#efefef"></path><path d="m160 352v136h48-48 48v-136z" fill="#fdb933"></path><g><path d="m168 56h176v64h-176z" fill="#4d4d4d"></path><path d="m256 16-104 32 104 32 104-32z" fill="#333"></path>
+        <h1 class="u-enable-responsive u-text u-text-default u-title u-text-1" data-animation-name="lightSpeedIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction=""><span class="u-icon u-icon-1"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" style="width: 1em; height: 1em;"><path d="m56 488v-99.909a30 30 0 0 1 18.578-27.741l125.422-48.35h112l125.422 48.35a30 30 0 0 1 18.578 27.741v99.909z" fill="#333"></path><path d="m208 376h96v112h-96z" fill="#efefef"></path><path d="m160 352v136h48-48 48v-136z" fill="#fdb933"></path><g><path d="m168 56h176v64h-176z" fill="#4d4d4d"></path><path d="m256 16-104 32 104 32 104-32z" fill="#333"></path>
 </g><path d="m304 352v136h48-48 48v-136z" fill="#fdb933"></path><path d="m256 352 56-40-16-48h-80l-16 48z" fill="#ffd4cf"></path><path d="m296 264h-80l-6.39 19.17 14.429 12.264a36.042 36.042 0 0 0 23.312 8.566h17.249a36.027 36.027 0 0 0 23.428-8.666l14.323-12.277z" fill="#fbb8b0"></path><path d="m348 144h-20v-24h-144v24h-20a20 20 0 0 0 -20 20v16a20 20 0 0 0 20 20h20v31.159a20 20 0 0 0 7.048 15.24l43.352 36.841a20 20 0 0 0 12.951 4.76h17.249a20 20 0 0 0 13.015-4.815l43.4-37.2a20 20 0 0 0 6.985-15.185v-30.8h20a20 20 0 0 0 20-20v-16a20 20 0 0 0 -20-20z" fill="#ffd4cf"></path><path d="m184.018 231.994a20 20 0 0 0 7.03 14.405l43.352 36.841a20 20 0 0 0 12.951 4.76h17.249a20 20 0 0 0 13.015-4.815l43.4-37.2a20 20 0 0 0 6.948-14l-71.963-23.985z" fill="#fff9f8"></path><path d="m136 336 120 72 120-72-64-24-56 40-56-40z" fill="#a6cc3d"></path><g><path d="m464 416v-27.909a37.877 37.877 0 0 0 -23.531-35.138l-.168-.067-58.753-22.65a8 8 0 0 0 -2.739-1.726l-60.426-22.66-12.2-36.61 20.042-17.179a27.969 27.969 0 0 0 9.775-21.261v-22.8h12a28.032 28.032 0 0 0 28-28v-16a28.032 28.032 0 0 0 -28-28h-12v-8h8a8 8 0 0 0 8-8v-61.168l10.353-3.186a8 8 0 0 0 0-15.292l-104-32a8.013 8.013 0 0 0 -4.706 0l-40 12.307 4.706 15.293 37.647-11.584 76.8 23.63-76.8 23.63-76.8-23.63 23.15-7.123-4.706-15.293-48 14.77a8 8 0 0 0 0 15.292l10.356 3.186v61.168a8 8 0 0 0 8 8h8v8h-12a28.032 28.032 0 0 0 -28 28v16a28.032 28.032 0 0 0 28 28h12v23.158a27.953 27.953 0 0 0 9.868 21.336l19.9 16.91-12.151 36.446-60.426 22.66a8 8 0 0 0 -2.739 1.726l-58.752 22.65-.168.067a37.877 37.877 0 0 0 -23.532 35.138v99.909a8 8 0 0 0 8 8h400a8 8 0 0 0 8-8v-56h-16v48h-88v-125.07l16.085-9.651 58.369 22.5a21.927 21.927 0 0 1 13.546 20.312v27.909zm-116-264a12.013 12.013 0 0 1 12 12v16a12.013 12.013 0 0 1 -12 12h-12v-40zm-94.353-64.354a8 8 0 0 0 4.706 0l77.647-23.891v48.245h-160v-48.245zm66.353 40.354v92.9l-61.47-20.49a8.006 8.006 0 0 0 -5.06 0l-61.47 20.49v-92.9zm-156 64a12.013 12.013 0 0 1 -12-12v-16a12.013 12.013 0 0 1 12-12h12v40zm29.641 45.219 62.359-20.786 62.178 20.726a12.014 12.014 0 0 1 -2.368 2.753l-43.4 37.2a12.008 12.008 0 0 1 -7.81 2.888h-17.249a12.023 12.023 0 0 1 -7.772-2.855l-43.35-36.845a11.993 11.993 0 0 1 -2.588-3.081zm35.578 52.118a28.032 28.032 0 0 0 18.132 6.663h17.249a28.023 28.023 0 0 0 18.221-6.74l10.238-8.776 9.481 28.44-46.54 33.245-46.542-33.245 9.45-28.35zm-165.219 98.754a21.928 21.928 0 0 1 13.547-20.311l58.368-22.5 16.085 9.65v125.07h-88zm104 91.909v-115.47l32 19.2v96.27zm48 0v-86.67l35.884 21.53a8 8 0 0 0 8.232 0l35.884-21.53v86.67zm128 0h-32v-96.27l32-19.2zm-88-81.329-101.151-60.691 44.008-16.965 52.493 37.5c.173.124.351.24.532.349a8 8 0 0 0 8.236 0c.181-.109.359-.225.532-.349l52.493-37.5 44.008 16.965z"></path><path d="m216 160h16v24h-16z"></path><path d="m280 160h16v24h-16z"></path>
-</g></svg><img></span>&nbsp;​&nbsp;Kelvin Personal Site
+</g></svg><img></span>Kelvin Personal Site
         </h1>
-        <div class="u-social-icons u-spacing-10 u-social-icons-1">
+        <div class="u-social-icons u-spacing-20 u-social-icons-1" data-animation-name="rubberBand" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
           <a class="u-social-url" target="_blank" href="https://www.instagram.com/kelvin_reinard"><span class="u-icon u-icon-circle u-social-instagram u-social-type-logo u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-e0e5"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 112 112" x="0px" y="0px" id="svg-e0e5"><path d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z"></path><path d="M79.7,26.8c-3,0-5.4,2.5-5.4,5.4s2.5,5.4,5.4,5.4c3,0,5.4-2.5,5.4-5.4S82.7,26.8,79.7,26.8z"></path><path d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7 V33.7C100.8,21.1,90.6,11,78.2,11z M91,78.4c0,7.1-5.8,12.8-12.8,12.8H33.5c-7.1,0-12.8-5.8-12.8-12.8V33.7 c0-7.1,5.8-12.8,12.8-12.8h44.7c7.1,0,12.8,5.8,12.8,12.8V78.4z"></path></svg></span>
           </a>
           <a class="u-social-url" target="_blank" href="https://linkedin.com/in/kelvinreinard"><span class="u-icon u-icon-circle u-social-linkedin u-social-type-logo u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-5c2c"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 112 112" x="0px" y="0px" id="svg-5c2c"><path d="M33.8,96.8H14.5v-58h19.3V96.8z M24.1,30.9L24.1,30.9c-6.6,0-10.8-4.5-10.8-10.1c0-5.8,4.3-10.1,10.9-10.1 S34.9,15,35.1,20.8C35.1,26.4,30.8,30.9,24.1,30.9z M103.3,96.8H84.1v-31c0-7.8-2.7-13.1-9.8-13.1c-5.3,0-8.5,3.6-9.9,7.1 c-0.6,1.3-0.6,3-0.6,4.8V97H44.5c0,0,0.3-52.6,0-58h19.3v8.2c2.6-3.9,7.2-9.6,17.4-9.6c12.7,0,22.2,8.4,22.2,26.1V96.8z"></path></svg></span>
@@ -76,7 +78,7 @@
           <a class="u-social-url" target="_blank" href="https://youtube.com/channel/UCL7WRTchTedIcwfsC9sPGKA"><span class="u-icon u-icon-circle u-social-type-logo u-social-youtube u-icon-4"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-6b5f"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 112 112" x="0px" y="0px" id="svg-6b5f"><path d="M82.3,24H29.7C19.3,24,11,32.5,11,43v26.7c0,10.5,8.3,19,18.7,19h52.5c10.3,0,18.7-8.5,18.7-19V43 C101,32.5,92.7,24,82.3,24L82.3,24z M69.7,57.6L45.1,69.5c-0.7,0.2-1.4-0.2-1.4-0.8V44.1c0-0.7,0.8-1.3,1.4-0.8l24.6,12.6 C70.4,56.2,70.4,57.3,69.7,57.6L69.7,57.6z"></path></svg></span>
           </a>
         </div>
-        <form action="#" class="u-border-1 u-border-grey-30 u-search u-search-left u-white u-search-1">
+        <form action="#" class="u-border-1 u-border-grey-30 u-enable-responsive u-search u-search-left u-white u-search-1">
           <button class="u-search-button" type="submit">
             <span class="u-icon-rectangle u-palette-1-base u-search-icon u-spacing-10 u-text-white u-search-icon-1">
               <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 56.966 56.966"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-386a"></use></svg>
@@ -143,7 +145,7 @@
           </ul>
           <div class="u-tab-content">
             <div class="u-container-style u-tab-active u-tab-pane u-white u-tab-pane-1" id="tab-0da5" role="tabpanel" aria-labelledby="link-tab-0da5">
-              <div class="u-container-layout u-valign-top u-container-layout-1">
+              <div class="u-container-layout u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-1">
                 <img alt="" class="u-expanded-width-xs u-image u-image-default u-image-1" data-image-width="1000" data-image-height="1777" src="images/60972339-0.jpeg">
                 <ul class="u-custom-list u-text u-text-1">
                   <li style="margin-left: 1.8em;">
@@ -198,7 +200,7 @@
                       </tr>
                     </thead>
                     <tbody class="u-align-center u-table-alt-grey-10 u-table-body u-table-body-1">
-                      <tr style="height: 36px;">
+                      <tr style="height: 32px;">
                         <td class="u-border-4 u-border-white u-table-cell">SMA FONS VITAE 1</td>
                         <td class="u-border-4 u-border-white u-table-cell">UNIKA ATMA JAYA</td>
                       </tr>
@@ -426,6 +428,9 @@ university level&nbsp;&nbsp;<br>
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-a513"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">© 2020 Kelvin Website - All Rights Reserved</p>
-      </div></footer>
+      </div></footer><span style="height: 64px; width: 64px; margin-left: 0; margin-right: auto; margin-top: 0; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
+        <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
+        <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
+    </span>
   </body>
 </html>
