--- a/Competencies.html
+++ b/Competencies.html
@@ -788,7 +788,7 @@ comfortable, all roles are played. With 7 primary roles from 11 : Intermediary, 
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-a513"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">© 2020 Kelvin Website - All Rights Reserved - Written Using&nbsp; HTML &amp; CSS</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">© 2020 Kelvin Website - All Rights Reserved - Written Using&nbsp; HTML, CSS,&amp; Javascript JS</p>
       </div></footer>
   <section class="u-black u-clearfix u-container-style u-dialog-block u-opacity u-opacity-70 u-section-4" id="sec-93b5">
       <div class="u-align-left u-container-style u-dialog u-expanded-width-sm u-expanded-width-xs u-shape-rectangle u-white u-dialog-1">
