--- a/About-Me.html
+++ b/About-Me.html
@@ -84,7 +84,12 @@
           <input class="u-search-input" type="search" name="search" value="" placeholder="Search">
         </form>
       </div></header>
-    <section class="u-clearfix u-palette-3-base u-section-1" id="carousel_1647">
+    <section class="u-border-2 u-border-grey-75 u-clearfix u-shading u-video u-section-1" id="carousel_1647">
+      <div style="filter: brightness(0.75);" class="u-background-video u-expanded u-video-cover">
+        <div style=" position: absolute;width:178%;left:-39%;height:178%;top:-39%" class="embed-responsive">
+          <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/4l6J5jhRgos?playlist=4l6J5jhRgos&amp;loop=1&amp;mute=1&amp;showinfo=0&amp;controls=0&amp;start=0&amp;autoplay=1" frameborder="0" allowfullscreen=""></iframe>
+        </div>
+      </div>
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout" style="">
