--- a/Experiences.html
+++ b/Experiences.html
@@ -230,49 +230,49 @@ KNOWLEDGE</h1>
                       <ul class="u-custom-list u-text u-text-2">
                         <li style="">
                           <div class="class u-list-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06" style="color: rgb(50, 190, 166);"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
                           </div>Data
 Science Knowledges
                         </li>
                         <li style="">
                           <div class="class u-list-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06" style="color: rgb(50, 190, 166);"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
                           </div>Data Management Knowledges
                         </li>
                         <li style="">
                           <div class="class u-list-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06" style="color: rgb(50, 190, 166);"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
                           </div>Programming Languages<br>
                         </li>
                         <li style="">
                           <div class="class u-list-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06" style="color: rgb(50, 190, 166);"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
                           </div>Banking Knowledges
                         </li>
                         <li style="">
                           <div class="class u-list-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06" style="color: rgb(50, 190, 166);"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
                           </div>Financial-Accounting Theories &amp; Practices<br>
                         </li>
                         <li style="">
                           <div class="class u-list-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06" style="color: rgb(50, 190, 166);"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
                           </div>Risk
 Management Knowledges<br>
                         </li>
                         <li style="">
                           <div class="class u-list-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06" style="color: rgb(50, 190, 166);"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
                           </div>Project Management Methodologies &amp; Skills
                         </li>
                         <li style="">
                           <div class="class u-list-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06" style="color: rgb(50, 190, 166);"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
                           </div>Business Analysis Skills
                         </li>
                         <li style="">
                           <div class="class u-list-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06" style="color: rgb(50, 190, 166);"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" id="svg-eb06"><ellipse cx="256" cy="256" fill="currentColor" rx="256" ry="255.8"></ellipse><path d="m235.5 392.1-121.1-94.3 34.4-44.2 74.4 57.9 122.6-177 46.1 31.9z" fill="#fff"></path></svg>
                           </div><i>And many more..</i>
                         </li>
                       </ul>
