--- a/index.html
+++ b/index.html
@@ -81,12 +81,7 @@
           <input class="u-search-input" type="search" name="search" value="" placeholder="Search">
         </form>
       </div></header>
-    <section class="skrollable u-align-center u-clearfix u-video u-section-1" id="carousel_9db2">
-      <div style="" class="u-background-video u-expanded u-video-cover">
-        <div style="position: absolute; width: 100%; height: 100%; left: 0; top: 0;" class="embed-responsive">
-          <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/Jk1CEXwwrt8?playlist=Jk1CEXwwrt8&amp;loop=1&amp;mute=1&amp;showinfo=0&amp;controls=0&amp;start=0&amp;autoplay=1" frameborder="0" allowfullscreen=""></iframe>
-        </div>
-      </div>
+    <section class="skrollable u-align-center u-clearfix u-grey-10 u-shading u-section-1" id="carousel_9db2">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-tabs u-tabs-1">
           <ul class="u-spacing-15 u-tab-list u-unstyled" role="tablist">
@@ -422,7 +417,7 @@ university level&nbsp;&nbsp;<br>
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-a513"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">© 2020 Kelvin Website - All Rights Reserved - Written Using&nbsp; HTML, CSS,&amp; Javascript JS</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">Kelvin Personal Website ©October 2020&nbsp;&nbsp;- All Rights Reserved - Written Using&nbsp; HTML, CSS, Javascript JS, Responsive Design, NicePage Framework</p>
       </div></footer><span style="height: 64px; width: 64px; margin-left: 0; margin-right: auto; margin-top: 0; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
