--- a/Kelvin-Experiences.html
+++ b/Kelvin-Experiences.html
@@ -37,7 +37,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body class="u-body"><header class="u-border-2 u-border-grey-75 u-clearfix u-header u-palette-1-base u-sticky u-header" id="sec-44b4"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body"><header class="u-border-2 u-border-grey-75 u-clearfix u-header u-palette-1-base u-sticky u-header" id="sec-44b4"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <nav class="u-align-left u-menu u-menu-one-level u-menu-open-right u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse" style="font-size: 1rem;">
             <a class="u-button-style u-nav-link" href="#" style="padding: 9px 0; font-size: calc(1em + 26px);">
@@ -91,7 +91,7 @@
         </form>
       </div></header> 
     <section class="u-align-center u-clearfix u-section-1" id="sec-8031">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <img src="images/dw.jpg" alt="" class="u-align-left u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-left-0 u-image-1">
         <div class="u-border-12 u-border-palette-5-dark-1 u-container-style u-group u-white u-group-1">
           <div class="u-container-layout u-container-layout-1">
@@ -382,20 +382,20 @@ Management Knowledges<br>
         </div>
       </div>
     </section>
-    <section class="skrollable u-align-center u-clearfix u-image u-parallax u-section-3" id="carousel_2c12" data-image-width="1980" data-image-height="1225">
+    <section class="skrollable u-align-center u-clearfix u-section-3" id="carousel_2c12">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-palette-2-base u-text-1"><b style="">Work</b>&nbsp;Experiences
         </h2>
         <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
+              <div class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-left-cell u-size-23-lg u-size-23-md u-size-23-sm u-size-23-xs u-size-30-xl u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-1">
                   <h4 class="u-text u-text-2">07/2020 - <b>current</b>
                   </h4>
                 </div>
               </div>
-              <div class="u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
+              <div class="u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-right-cell u-size-30-xl u-size-37-lg u-size-37-md u-size-37-sm u-size-37-xs u-layout-cell-2">
                 <div class="u-container-layout u-valign-top u-container-layout-2">
                   <h4 class="u-text u-text-3">Dept Head of Risk Management Group&nbsp;<b>Implementation</b>
                     <br>
@@ -409,13 +409,13 @@ Management Knowledges<br>
         <div class="u-clearfix u-layout-wrap u-layout-wrap-2">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-3">
+              <div class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-left-cell u-size-23-lg u-size-23-md u-size-23-sm u-size-23-xs u-size-30-xl u-layout-cell-3">
                 <div class="u-container-layout u-container-layout-3">
                   <h4 class="u-text u-text-5">08/2018 – 07/2020&nbsp;&nbsp;<br>
                   </h4>
                 </div>
               </div>
-              <div class="u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-4">
+              <div class="u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-right-cell u-size-30-xl u-size-37-lg u-size-37-md u-size-37-sm u-size-37-xs u-layout-cell-4">
                 <div class="u-container-layout u-valign-top u-container-layout-4">
                   <h4 class="u-text u-text-6">Dept
 Head of <b>Presales &amp; Competency Center</b> Risk Management Group&nbsp;<br>
@@ -429,13 +429,13 @@ Head of <b>Presales &amp; Competency Center</b> Risk Management Group&nbsp;<br>
         <div class="u-clearfix u-layout-wrap u-layout-wrap-3">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-5">
+              <div class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-left-cell u-size-23-lg u-size-23-md u-size-23-sm u-size-23-xs u-size-30-xl u-layout-cell-5">
                 <div class="u-container-layout u-container-layout-5">
                   <h4 class="u-text u-text-8">01/2016 – 08/2018&nbsp;&nbsp;<br>
                   </h4>
                 </div>
               </div>
-              <div class="u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-6">
+              <div class="u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-right-cell u-size-30-xl u-size-37-lg u-size-37-md u-size-37-sm u-size-37-xs u-layout-cell-6">
                 <div class="u-container-layout u-valign-top u-container-layout-6">
                   <h4 class="u-text u-text-9"><b>Senior Consultant</b> Risk Management Group&nbsp;<br>
                   </h4>
@@ -448,13 +448,13 @@ Head of <b>Presales &amp; Competency Center</b> Risk Management Group&nbsp;<br>
         <div class="u-clearfix u-layout-wrap u-layout-wrap-4">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-7">
+              <div class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-left-cell u-size-23-lg u-size-23-md u-size-23-sm u-size-23-xs u-size-30-xl u-layout-cell-7">
                 <div class="u-container-layout u-container-layout-7">
                   <h4 class="u-text u-text-11">01/2015 – 01/2016&nbsp;&nbsp;<br>
                   </h4>
                 </div>
               </div>
-              <div class="u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-8">
+              <div class="u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-right-cell u-size-30-xl u-size-37-lg u-size-37-md u-size-37-sm u-size-37-xs u-layout-cell-8">
                 <div class="u-container-layout u-valign-top u-container-layout-8">
                   <h4 class="u-text u-text-12">Section
 Head <b>Technical </b>Risk Management Group&nbsp;<br>
@@ -465,16 +465,16 @@ Head <b>Technical </b>Risk Management Group&nbsp;<br>
             </div>
           </div>
         </div>
-        <div class="u-clearfix u-layout-wrap u-layout-wrap-5">
+        <div class="u-clearfix u-gutter-0 u-layout-wrap u-layout-wrap-5">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-9">
+              <div class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-left-cell u-size-23-lg u-size-23-md u-size-23-sm u-size-23-xs u-size-30-xl u-layout-cell-9">
                 <div class="u-container-layout u-container-layout-9">
                   <h4 class="u-text u-text-14">01/2014 – 01/2015&nbsp;&nbsp;<br>
                   </h4>
                 </div>
               </div>
-              <div class="u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-10">
+              <div class="u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-right-cell u-size-30-xl u-size-37-lg u-size-37-md u-size-37-sm u-size-37-xs u-layout-cell-10">
                 <div class="u-container-layout u-valign-top u-container-layout-10">
                   <h4 class="u-text u-text-15"><b>Business/Functional </b>Consultant Risk Management Group&nbsp;<br>
                   </h4>
@@ -487,13 +487,13 @@ Head <b>Technical </b>Risk Management Group&nbsp;<br>
         <div class="u-clearfix u-layout-wrap u-layout-wrap-6">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-11">
+              <div class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-left-cell u-size-23-lg u-size-23-md u-size-23-sm u-size-23-xs u-size-30-xl u-layout-cell-11">
                 <div class="u-container-layout u-container-layout-11">
                   <h4 class="u-text u-text-17">18/02/2013 – 01/2014&nbsp;<br>
                   </h4>
                 </div>
               </div>
-              <div class="u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-12">
+              <div class="u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-right-cell u-size-30-xl u-size-37-lg u-size-37-md u-size-37-sm u-size-37-xs u-layout-cell-12">
                 <div class="u-container-layout u-valign-top u-container-layout-12">
                   <h4 class="u-text u-text-18"><b>Business/Functional</b> Consultant Enterprise General Ledger &amp; Regulatory Reporting Group&nbsp;<br>
                   </h4>
@@ -506,13 +506,13 @@ Head <b>Technical </b>Risk Management Group&nbsp;<br>
         <div class="u-clearfix u-layout-wrap u-layout-wrap-7">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-13">
+              <div class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-left-cell u-size-23-lg u-size-23-md u-size-23-sm u-size-23-xs u-size-30-xl u-layout-cell-13">
                 <div class="u-container-layout u-container-layout-13">
                   <h4 class="u-text u-text-20">dd/mm/yyyy&nbsp; - 02/2013<br>
                   </h4>
                 </div>
               </div>
-              <div class="u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-14">
+              <div class="u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-right-cell u-size-30-xl u-size-37-lg u-size-37-md u-size-37-sm u-size-37-xs u-layout-cell-14">
                 <div class="u-container-layout u-valign-top u-container-layout-14">
                   <h4 class="u-text u-text-21">Junior Consultant, Freelancer, Researcher, Students</h4>
                   <p class="u-text u-text-22">Misc.</p>
@@ -576,7 +576,7 @@ Head <b>Technical </b>Risk Management Group&nbsp;<br>
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-a513"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Kelvin Personal Website ©October 2020&nbsp;&nbsp;- All Rights Reserved - Written Using&nbsp; HTML, CSS, Javascript JS, and Responsive Design Framework</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">Kelvin Personal Website ©October 2020&nbsp;&nbsp;- All Rights Reserved - Written Using&nbsp; HTML, CSS, and Javascript JS</p>
       </div></footer><span style="height: 64px; width: 64px; margin-left: 0; margin-right: auto; margin-top: 0; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
