--- a/Kelvin-Reinard---About-Me.html
+++ b/Kelvin-Reinard---About-Me.html
@@ -35,7 +35,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body class="u-body"><header class="u-border-2 u-border-grey-75 u-clearfix u-header u-palette-1-base u-sticky u-header" id="sec-44b4"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body"><header class="u-border-2 u-border-grey-75 u-clearfix u-header u-palette-1-base u-sticky u-header" id="sec-44b4"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <nav class="u-align-left u-menu u-menu-one-level u-menu-open-right u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse" style="font-size: 1rem;">
             <a class="u-button-style u-nav-link" href="#" style="padding: 9px 0; font-size: calc(1em + 26px);">
@@ -284,7 +284,7 @@ well in technical areas.</p>
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-a513"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Kelvin Personal Website ©October 2020&nbsp;&nbsp;- All Rights Reserved - Written Using&nbsp; HTML, CSS, Javascript JS, and Responsive Design Framework</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">Kelvin Personal Website ©October 2020&nbsp;&nbsp;- All Rights Reserved - Written Using&nbsp; HTML, CSS, and Javascript JS</p>
       </div></footer><span style="height: 64px; width: 64px; margin-left: 0; margin-right: auto; margin-top: 0; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
